--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <h4>Kontak Kami</h4>
           <ul class="list-unstyled text-muted">
             <li class="text-white"><i class="bi bi-geo-alt me-2"></i> Jl. Raya Mariuk No. 123, Indonesia</li>
-            <li class="text-white"><i class="bi bi-telephone me-2"></i> +62 812 3456 7890</li>
+            <li class="text-white"><i class="bi bi-telephone me-2"></i> - </li>
             <li class="text-white"><i class="bi bi-instagram me-2"></i> seputar_mariuk</li>
           </ul>
         </div>
