--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <div class="col-lg-4 col-md-6 footer-widget">
           <h4>Kontak Kami</h4>
           <ul class="list-unstyled text-muted">
-            <li class="text-white"><i class="bi bi-geo-alt me-2"></i> Jl. Raya Mariuk No. 123, Indonesia</li>
+            <li class="text-white"><i class="bi bi-geo-alt me-2"></i> Jl. Kp.Mariuk</li>
             <li class="text-white"><i class="bi bi-telephone me-2"></i> - </li>
             <li class="text-white"><i class="bi bi-instagram me-2"></i> seputar_mariuk</li>
           </ul>
